<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">BookNPlay</string>

    <!-- filter pencarian-->
    <string name="terdekat">Terdekat</string>
    <string name="harga">Harga</string>
    <string name="top_booked">top Booked</string>

    <string name="futsal">Futsal</string>
    <string name="badminton">Badminton</string>

    <!--heading-->
    <string name="H_daftar">Isi Data diri dibawah ini!</string>

    <!--log-->
    <string name="in_nama">Masukkan Nama Anda</string>
    <string name="in_no">Masukkan Nomor Anda</string>
    <string name="in_email">Masukkan E-mail Anda</string>
    <string name="in_uname">Masukkan Username</string>
    <string name="in_pswrd">masukkan Password</string>


    <!--    Data Lapangan-->
    <string name="lap_Sandra">Sandra Futsal Center</string>
    <string name="almt_Sandra">Banjar Wangi, Kec. Ciawi,Kabupaten Depok, Jawa Barat 16720</string>
    <string name="jarak_sandra">850 m</string>

    <string name="Lap_Rama">Gor Rama</string>
    <string name="almt_rama">Jl. Kp. Mulyasari, RT.04/RW.03, Bojongkerta,Kec. Depok Sel., Kota Depok, Jawa Barat</string>
    <string name="jarak_rama">1,3 km</string>

    <string name="lap_ratu">Gor Ratu Jaya</string>
    <string name="almt_ratu">Kp Poponcol, RT.05/RW.01, Bojongkerta,Kec. Depok Sel., Kota Depok, Jawa Barat</string>
    <string name="jarak_ratu">2 km</string>

    <string name="lap_quadrant">Quadrant Futsal</string>
    <string name="almt_quadrant">Banjar Waru, Kec. Ciawi, Kabupaten Depok, Jawa Barat 16720</string>
    <string name="jarak_quadrant">3,8 km</string>

    <string name="lap_PopKaFC">Pop Ka FC</string>
    <string name="almt_popkfc">Banjar Wangi, Kec. Ciawi, Kabupaten Depok, Jawa Barat 16720</string>
    <string name="jarak_popkfc">4 km</string>


    <string name="lap_hasan">Gor hasan Djojo</string>
    <string name="almt_hasan">Jl. Kp. Mulyasari, RT.04/RW.03, Bojongkerta, Kec. Depok Sel., Kota Depok, Jawa Barat</string>
    <string name="jarak_hasan">1,4 km</string>
    
    <string name="lap_prima">Prima Badminton</string>
    <string name="almt_prima">Banjar Waru, Kec. Ciawi, Kabupaten Depok, Jawa Barat 16720</string>
    <string name="jarak_prima">2 km</string>

</resources>